src/style.css
/* ... */
/* micro-adjustments for mobile */

@media only screen and (max-width: 480px) {
  .landing-searchbar-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    /* margin-top: 20%; */
    height: auto;
  }

  .landing-down-chevron {
    bottom: 0;
    position: absolute;
    padding-bottom: 5rem;
  }

  .landing-down-text {
    /* bottom: 0; */
    position: absolute;
    padding-top: 46rem;
    pointer-events: none;
  }

  .search-bar-btn {
    height: 1.7rem;
    width: 20%;
    margin-block: 7%;
    background-color: var(--soft-peach);
    color: #1f1d36;
    border-color: transparent;
    border-end-end-radius: 0px;
    border-bottom-left-radius: 0px;
  }

  .loading-skeleton-div {
    width: 100%;
    overflow: auto;
    justify-content: flex-start;
  }

  .category-span,
  .loading-skeleton-span {
    padding: 2.6%;
    padding-top: 0;
  }

  .test-margin .thumbnail-category,
  .loading-skeleton-thumbnails {
    /* max-width: 9.36rem; */
    /* max-height: 13.10rem; */
    /* max-width: 9.36rem; */
    /* max-height: 13.10rem; */
    /* adjusted: */
    width: 9.21rem;
    height: 13.09rem;
    /* margin: 2.3%; */
  }

  .thumbnail-category {
    /* padding: 3%; */
  }

  /* .test-margin.thumbnail-category { */
  /* width: 225px; */
  /* height: 317px; */
  /* } */

  .loading-skeleton-span {
    display: flex;
    width: 100%;
  }
  /* 
    .loading-skeleton-thumbnails {
        display: flex;
        flex-direction: row;
        
    } */

  .search-bar {
    background-color: rgba(255, 255, 255, 0.05);
    border: solid white 1px;
    max-width: 50%;
    border-radius: 7px;
    color: white;
    font-size: 1.2rem;
    padding: 0.5%;
    letter-spacing: 1px;
  }

  .pic-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
  }

  .card-title {
    max-width: 74%;
    display: flex;
    flex-wrap: wrap;
    text-align: center;
  }

  .card-li {
    margin-block: 1.2%;
  }

  .synopsis-section {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .synopsis-hidden {
    display: none;
  }

  .synopsis-div {
    opacity: 93%;
    background-color: var(--mint-white);
    max-width: 95%;
    font-size: 1.5rem;
    margin-bottom: 20%;
    /* visibility: hidden; */
  }

  .centered-span.synopsis-bar {
    width: 100%;
    height: max-content;
    display: flex;
    flex-direction: column;
    background-color: var(--bebop-blue);
    z-index: 99;
    /* position: -webkit-sticky; */
    position: sticky;
    top: 0;
    padding: 0;
  }

  .synopsis-text {
    white-space: pre-line;
    /* text-indent: 2%; */
    line-height: 1.2;
    padding-left: 1%;
    color: black;
  }

  .synopsis-text::first-letter {
    font-size: 2rem;
    /* letter-spacing: 1px; */
  }

  .synopsis-btn {
    width: 100%;
    background-color: var(--dark-blue);
    color: whitesmoke;
    border: transparent;
    font-size: 1.2rem;
  }

  .synopsis-chevron {
    /* margin-left: 20%; */
    background-color: transparent;
    border: transparent;
    color: white;
    font-size: 2rem;
    /* position: absolute; */
    /* margin-top: 1%; */
    padding: 0;
    /* margin-top: 14.6%; */

    /* right: 0; */
    /* margin-right: 2%; */
  }

  /* results & pagination */

  .processing-query-container {
    width: 100%;
    height: 100%;
    margin-top: 20%;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .result-title-mobile {
    margin-left: 3%;
  }

  .pagination {
    width: 100%;
    padding: 5%;
    display: flex;
    justify-content: space-evenly;
    font-size: 1rem;
    background-color: crimson;
  }

  .pagination__link--active {
    text-decoration: underline;
    font-size: 1.2rem;
    font-weight: bold;
  }

  .no-results-container {
    width: 100%;
    text-align: center;
    margin-top: 33%;
  }

  .few-results-container {
    width: 100%;
    text-align: center;
    margin-top: 20%;
    color: cadetblue;
    font-size: 20px;
  }

  .centered-div {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .offset-span {
    position: absolute;
    margin-bottom: -5%;
  }

  .categ-head {
    margin-top: 1.6rem;
  }

  .category-div {
    /* width: 100%; */
    /* max-width: 100%; */
    display: flex;
    flex-direction: column;
    /* justify-items: center; */
    /* flex-wrap: wrap; */
    /* overflow-wrap: normal; */
    max-height: 50%;
    margin-top: 0;
    padding-top: 0;
    min-width: max-content;
    max-width: max-content;
    min-height: 450px;
  }
}

